--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ a{
 a:hover{
   text-decoration: underline;
 }
-input[type=submit]{
+/*input[type=submit]{
   background-color: #bebcb8;
   border: none;
   cursor: pointer;
@@ -71,7 +71,7 @@ input[type=submit]{
   border-radius: 30px;
   transition: .5s;
   display: block;
-}
+}*/
 ::-webkit-input-placeholder{
   color: #999;
 }
